--- a/header-tracker/index.html
+++ b/header-tracker/index.html
@@ -1,155 +1,208 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header & Prop Calculator for Masonry Contractors | PM4Subs</title>
-    <meta name="description" content="Automatically calculate header sizes, prop counts, couplers, and rental durations. Built specifically for masonry subcontractors and field teams.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://pm4subs.com/header-tracker/">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>
+            Header & Prop Calculator for Masonry Contractors | PM4Subs
+        </title>
+        <meta
+            name="description"
+            content="Automatically calculate header sizes, prop counts, couplers, and rental durations. Built specifically for masonry subcontractors and field teams."
+        />
+        <meta name="robots" content="index, follow" />
+        <link rel="canonical" href="https://pm4subs.com/header-tracker/" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Header & Prop Calculator for Masonry Contractors | PM4Subs">
-    <meta property="og:description" content="Automatically calculate header sizes, prop counts, couplers, and rental durations. Built specifically for masonry subcontractors.">
-    <meta property="og:url" content="https://pm4subs.com/header-tracker/">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://pm4subs.com/screenshots/projects-dashboard.png">
+        <!-- Open Graph -->
+        <meta
+            property="og:title"
+            content="Header & Prop Calculator for Masonry Contractors | PM4Subs"
+        />
+        <meta
+            property="og:description"
+            content="Automatically calculate header sizes, prop counts, couplers, and rental durations. Built specifically for masonry subcontractors."
+        />
+        <meta property="og:url" content="https://pm4subs.com/header-tracker/" />
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:image"
+            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+        />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Header & Prop Calculator for Masonry Contractors | PM4Subs">
-    <meta name="twitter:description" content="Automatically calculate header sizes, prop counts, couplers, and rental durations. Built specifically for masonry subcontractors.">
-    <meta name="twitter:image" content="https://pm4subs.com/screenshots/projects-dashboard.png">
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            name="twitter:title"
+            content="Header & Prop Calculator for Masonry Contractors | PM4Subs"
+        />
+        <meta
+            name="twitter:description"
+            content="Automatically calculate header sizes, prop counts, couplers, and rental durations. Built specifically for masonry subcontractors."
+        />
+        <meta
+            name="twitter:image"
+            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+        />
 
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-        }
-    </script>
+        <!-- Tailwind CSS CDN -->
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                darkMode: "class",
+            };
+        </script>
 
-    <!-- Design System -->
-    <link rel="stylesheet" href="../design-system.css">
-</head>
-<body>
-    <!-- Navigation -->
-    <nav class="nav">
-        <div class="nav-container">
-            <a href="/" class="nav-logo">PM4Subs</a>
-            <div class="nav-links">
+        <!-- Design System -->
+        <link rel="stylesheet" href="../design-system.css" />
+    </head>
+    <body>
+        <!-- Navigation -->
+        <nav class="nav">
+            <div class="nav-container">
+                <a href="/" class="nav-logo">PM4Subs</a>
+                <div class="nav-links">
+                    <a href="/products/">Products</a>
+                    <a href="/tools/">Tools</a>
+                    <a href="/about/">About</a>
+                    <a href="/" class="btn-primary">Get Early Access</a>
+                </div>
+                <button
+                    class="hamburger"
+                    onclick="toggleSidePanel()"
+                    aria-label="Toggle menu"
+                >
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </nav>
+
+        <!-- Side Panel -->
+        <div class="side-panel-overlay" onclick="closeSidePanel()"></div>
+        <aside class="side-panel">
+            <nav class="side-panel-nav">
+                <span class="nav-section-title">Navigate</span>
+                <a href="/">Home</a>
                 <a href="/products/">Products</a>
+                <a href="/tools/">Tools</a>
                 <a href="/about/">About</a>
+
+                <span class="nav-section-title">Free Tools</span>
+                <a href="/image-compressor/">Image Compressor</a>
+                <a href="/spec-analyzer/">Spec Analyzer</a>
+                <a href="/header-tracker/">Header Tracker</a>
+                <a href="/tool-tracker/">Tool Tracker</a>
+
+                <span class="nav-section-title">Legal</span>
+                <a href="/privacy/">Privacy Policy</a>
+            </nav>
+            <div class="side-panel-cta">
                 <a href="/" class="btn-primary">Get Early Access</a>
             </div>
-            <button class="hamburger" onclick="toggleSidePanel()" aria-label="Toggle menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </nav>
+        </aside>
 
-    <!-- Side Panel -->
-    <div class="side-panel-overlay" onclick="closeSidePanel()"></div>
-    <aside class="side-panel">
-        <nav class="side-panel-nav">
-            <span class="nav-section-title">Navigate</span>
-            <a href="/">Home</a>
-            <a href="/products/">Products</a>
-            <a href="/about/">About</a>
+        <!-- Hero Section -->
+        <section class="hero">
+            <h1>Header & Prop Calculator for Masonry Contractors</h1>
+            <p>
+                Automatically calculate header sizes, prop counts, couplers, and
+                rental durations. Built specifically for masonry subcontractors.
+            </p>
+            <a href="/" class="btn-primary">Open Header Tracker</a>
+        </section>
 
-            <span class="nav-section-title">Tools</span>
-            <a href="/spec-analyzer/">Spec Analyzer</a>
-            <a href="/header-tracker/">Header Tracker</a>
-            <a href="/tool-tracker/">Tool Tracker</a>
+        <!-- Features Section -->
+        <section class="section">
+            <div class="container">
+                <div class="feature-grid">
+                    <div class="card">
+                        <h2>Accurate Header Planning</h2>
+                        <p>
+                            Enter your opening width and height and the system
+                            determines header lengths, prop spacing, coupler
+                            counts, and rental timelines based on real jobsite
+                            rules.
+                        </p>
+                    </div>
 
-            <span class="nav-section-title">Legal</span>
-            <a href="/privacy/">Privacy Policy</a>
-        </nav>
-        <div class="side-panel-cta">
-            <a href="/" class="btn-primary">Get Early Access</a>
-        </div>
-    </aside>
+                    <div class="card">
+                        <h2>Built From Real Field Experience</h2>
+                        <p>
+                            This tool is based on the same logic we use in the
+                            field: spacing props every 6 feet, combining headers
+                            into 12-foot sections, and matching rental durations
+                            to total span.
+                        </p>
+                    </div>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Header & Prop Calculator for Masonry Contractors</h1>
-        <p>Automatically calculate header sizes, prop counts, couplers, and rental durations. Built specifically for masonry subcontractors.</p>
-        <a href="/" class="btn-primary">Open Header Tracker</a>
-    </section>
-
-    <!-- Features Section -->
-    <section class="section">
-        <div class="container">
-            <div class="feature-grid">
-                <div class="card">
-                    <h2>Accurate Header Planning</h2>
-                    <p>
-                        Enter your opening width and height and the system determines header lengths, prop spacing, coupler counts,
-                        and rental timelines based on real jobsite rules.
-                    </p>
-                </div>
-
-                <div class="card">
-                    <h2>Built From Real Field Experience</h2>
-                    <p>
-                        This tool is based on the same logic we use in the field: spacing props every 6 feet, combining headers into
-                        12-foot sections, and matching rental durations to total span.
-                    </p>
-                </div>
-
-                <div class="card">
-                    <h2>Simple Exports</h2>
-                    <p>
-                        Generate clean PDFs for rentals, pick lists, or foreman handoff. Everything is designed to save time at the yard
-                        and on the job.
-                    </p>
+                    <div class="card">
+                        <h2>Simple Exports</h2>
+                        <p>
+                            Generate clean PDFs for rentals, pick lists, or
+                            foreman handoff. Everything is designed to save time
+                            at the yard and on the job.
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- CTA Section -->
-    <section class="cta-section">
-        <div class="container">
-            <h2>Plan Headers in Minutes, Not Hours</h2>
-            <p>Get accurate counts for your next masonry job</p>
-            <a href="/" class="btn-primary">Get Early Access</a>
-        </div>
-    </section>
+        <!-- CTA Section -->
+        <section class="cta-section">
+            <div class="container">
+                <h2>Plan Headers in Minutes, Not Hours</h2>
+                <p>Get accurate counts for your next masonry job</p>
+                <a href="/" class="btn-primary">Get Early Access</a>
+            </div>
+        </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 PM4Subs. All rights reserved. | <a href="/privacy/">Privacy Policy</a></p>
-            <p class="mt-2">Questions? <a href="mailto:hello@pm4subs.com">hello@pm4subs.com</a></p>
-            <p class="mt-2"><a href="/">Back to PM4Subs project management for subcontractors</a></p>
-        </div>
-    </footer>
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <p>
+                    &copy; 2025 PM4Subs. All rights reserved. |
+                    <a href="/privacy/">Privacy Policy</a>
+                </p>
+                <p class="mt-2">
+                    Questions?
+                    <a href="mailto:hello@pm4subs.com">hello@pm4subs.com</a>
+                </p>
+                <p class="mt-2">
+                    <a href="/"
+                        >Back to PM4Subs project management for
+                        subcontractors</a
+                    >
+                </p>
+            </div>
+        </footer>
 
-    <script>
-        function toggleSidePanel() {
-            const sidePanel = document.querySelector('.side-panel');
-            const overlay = document.querySelector('.side-panel-overlay');
-            const hamburger = document.querySelector('.hamburger');
-            sidePanel.classList.toggle('open');
-            overlay.classList.toggle('show');
-            hamburger.classList.toggle('active');
-            document.body.style.overflow = sidePanel.classList.contains('open') ? 'hidden' : '';
-        }
-        function closeSidePanel() {
-            const sidePanel = document.querySelector('.side-panel');
-            const overlay = document.querySelector('.side-panel-overlay');
-            const hamburger = document.querySelector('.hamburger');
-            sidePanel.classList.remove('open');
-            overlay.classList.remove('show');
-            hamburger.classList.remove('active');
-            document.body.style.overflow = '';
-        }
-        document.addEventListener('keydown', (e) => {
-            if (e.key === 'Escape') closeSidePanel();
-        });
-    </script>
-</body>
+        <script>
+            function toggleSidePanel() {
+                const sidePanel = document.querySelector(".side-panel");
+                const overlay = document.querySelector(".side-panel-overlay");
+                const hamburger = document.querySelector(".hamburger");
+                sidePanel.classList.toggle("open");
+                overlay.classList.toggle("show");
+                hamburger.classList.toggle("active");
+                document.body.style.overflow = sidePanel.classList.contains(
+                    "open",
+                )
+                    ? "hidden"
+                    : "";
+            }
+            function closeSidePanel() {
+                const sidePanel = document.querySelector(".side-panel");
+                const overlay = document.querySelector(".side-panel-overlay");
+                const hamburger = document.querySelector(".hamburger");
+                sidePanel.classList.remove("open");
+                overlay.classList.remove("show");
+                hamburger.classList.remove("active");
+                document.body.style.overflow = "";
+            }
+            document.addEventListener("keydown", (e) => {
+                if (e.key === "Escape") closeSidePanel();
+            });
+        </script>
+    </body>
 </html>
