--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,155 +1,217 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy | PM4Subs</title>
-    <meta name="description" content="Privacy Policy for PM4Subs project management software. Learn how we collect, use, and protect your information.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://pm4subs.com/privacy/">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Privacy Policy | PM4Subs</title>
+        <meta
+            name="description"
+            content="Privacy Policy for PM4Subs project management software. Learn how we collect, use, and protect your information."
+        />
+        <meta name="robots" content="index, follow" />
+        <link rel="canonical" href="https://pm4subs.com/privacy/" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Privacy Policy | PM4Subs">
-    <meta property="og:description" content="Privacy Policy for PM4Subs project management software.">
-    <meta property="og:url" content="https://pm4subs.com/privacy/">
-    <meta property="og:type" content="website">
+        <!-- Open Graph -->
+        <meta property="og:title" content="Privacy Policy | PM4Subs" />
+        <meta
+            property="og:description"
+            content="Privacy Policy for PM4Subs project management software."
+        />
+        <meta property="og:url" content="https://pm4subs.com/privacy/" />
+        <meta property="og:type" content="website" />
 
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-        }
-    </script>
+        <!-- Tailwind CSS CDN -->
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                darkMode: "class",
+            };
+        </script>
 
-    <!-- Design System -->
-    <link rel="stylesheet" href="../design-system.css">
-</head>
-<body>
-    <!-- Navigation -->
-    <nav class="nav">
-        <div class="nav-container">
-            <a href="/" class="nav-logo">PM4Subs</a>
-            <div class="nav-links">
+        <!-- Design System -->
+        <link rel="stylesheet" href="../design-system.css" />
+    </head>
+    <body>
+        <!-- Navigation -->
+        <nav class="nav">
+            <div class="nav-container">
+                <a href="/" class="nav-logo">PM4Subs</a>
+                <div class="nav-links">
+                    <a href="/products/">Products</a>
+                    <a href="/tools/">Tools</a>
+                    <a href="/about/">About</a>
+                    <a href="/" class="btn-primary">Get Early Access</a>
+                </div>
+                <button
+                    class="hamburger"
+                    onclick="toggleSidePanel()"
+                    aria-label="Toggle menu"
+                >
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </nav>
+
+        <!-- Side Panel -->
+        <div class="side-panel-overlay" onclick="closeSidePanel()"></div>
+        <aside class="side-panel">
+            <nav class="side-panel-nav">
+                <span class="nav-section-title">Navigate</span>
+                <a href="/">Home</a>
                 <a href="/products/">Products</a>
+                <a href="/tools/">Tools</a>
                 <a href="/about/">About</a>
+
+                <span class="nav-section-title">Free Tools</span>
+                <a href="/image-compressor/">Image Compressor</a>
+                <a href="/spec-analyzer/">Spec Analyzer</a>
+                <a href="/header-tracker/">Header Tracker</a>
+                <a href="/tool-tracker/">Tool Tracker</a>
+
+                <span class="nav-section-title">Legal</span>
+                <a href="/privacy/">Privacy Policy</a>
+            </nav>
+            <div class="side-panel-cta">
                 <a href="/" class="btn-primary">Get Early Access</a>
             </div>
-            <button class="hamburger" onclick="toggleSidePanel()" aria-label="Toggle menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
+        </aside>
+
+        <div class="privacy-content">
+            <h1>Privacy Policy</h1>
+            <p><strong>Last updated:</strong> December 2025</p>
+
+            <p>
+                This Privacy Policy describes how PM4Subs LLC ("we", "us",
+                "our") collects, uses, and protects information provided by
+                users of our applications, including PM4Subs, HeaderTracker,
+                Rentals4Subs, Tools4Subs, and related services (collectively,
+                the "Services").
+            </p>
+
+            <h2>Information We Collect</h2>
+            <p>We may collect the following information:</p>
+            <ul>
+                <li>Name and company information</li>
+                <li>Email address</li>
+                <li>Phone number</li>
+                <li>Project data, rental details, and transactional records</li>
+                <li>SMS and notification preferences</li>
+                <li>Device and browser information</li>
+            </ul>
+
+            <h2>How We Use Information</h2>
+            <p>We use collected information to:</p>
+            <ul>
+                <li>
+                    Provide scheduling, rental, and project management services
+                </li>
+                <li>
+                    Send SMS notifications related to account activity,
+                    scheduling, verification, and important updates
+                </li>
+                <li>Improve our software and customer support</li>
+                <li>Maintain security and prevent fraud</li>
+            </ul>
+
+            <h2>SMS Messaging and Consent</h2>
+            <p>
+                By providing a phone number during account creation or rental
+                scheduling, users agree to receive SMS notifications related to
+                Services they have requested. Users may opt out at any time by
+                replying <strong>STOP</strong>. Users may request help by
+                replying <strong>HELP</strong>.
+            </p>
+
+            <h2>Sharing of Information</h2>
+            <p>
+                We do not sell customer information. We may share necessary
+                information with:
+            </p>
+            <ul>
+                <li>SMS providers (such as Twilio) for message delivery</li>
+                <li>Payment processors (such as Stripe) if applicable</li>
+                <li>Hosting and database platforms (such as Supabase)</li>
+            </ul>
+
+            <h2>Data Security</h2>
+            <p>
+                We use industry-standard security practices to protect
+                information, including encryption, authentication, and access
+                control. While we take reasonable steps to protect data, no
+                method of transmission or storage is 100% secure.
+            </p>
+
+            <h2>Cookies and Analytics</h2>
+            <p>
+                We may use cookies and analytic tools to improve website
+                functionality and user experience. Cookies can be disabled in
+                browser settings.
+            </p>
+
+            <h2>Children's Privacy</h2>
+            <p>
+                Our Services are intended for business users and are not
+                directed at children under 13 years of age.
+            </p>
+
+            <h2>Contact Information</h2>
+            <p>
+                If you have questions about this Privacy Policy or would like to
+                request data removal, please contact us at:
+            </p>
+            <p>
+                <strong>Email:</strong> support@pm4subs.com<br />
+                <strong>Mailing Address:</strong> PM4Subs LLC, Portland, OR
+            </p>
+
+            <h2>Changes to This Policy</h2>
+            <p>
+                We may update this Privacy Policy from time to time. The updated
+                version will be posted at this URL.
+            </p>
         </div>
-    </nav>
 
-    <!-- Side Panel -->
-    <div class="side-panel-overlay" onclick="closeSidePanel()"></div>
-    <aside class="side-panel">
-        <nav class="side-panel-nav">
-            <span class="nav-section-title">Navigate</span>
-            <a href="/">Home</a>
-            <a href="/products/">Products</a>
-            <a href="/about/">About</a>
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <p>&copy; 2025 PM4Subs. All rights reserved.</p>
+                <p class="mt-2">
+                    <a href="/"
+                        >Back to PM4Subs project management for
+                        subcontractors</a
+                    >
+                </p>
+            </div>
+        </footer>
 
-            <span class="nav-section-title">Tools</span>
-            <a href="/spec-analyzer/">Spec Analyzer</a>
-            <a href="/header-tracker/">Header Tracker</a>
-            <a href="/tool-tracker/">Tool Tracker</a>
-
-            <span class="nav-section-title">Legal</span>
-            <a href="/privacy/">Privacy Policy</a>
-        </nav>
-        <div class="side-panel-cta">
-            <a href="/" class="btn-primary">Get Early Access</a>
-        </div>
-    </aside>
-
-    <div class="privacy-content">
-        <h1>Privacy Policy</h1>
-        <p><strong>Last updated:</strong> December 2025</p>
-
-        <p>This Privacy Policy describes how PM4Subs LLC ("we", "us", "our") collects, uses, and protects information provided by users of our applications, including PM4Subs, HeaderTracker, Rentals4Subs, Tools4Subs, and related services (collectively, the "Services").</p>
-
-        <h2>Information We Collect</h2>
-        <p>We may collect the following information:</p>
-        <ul>
-            <li>Name and company information</li>
-            <li>Email address</li>
-            <li>Phone number</li>
-            <li>Project data, rental details, and transactional records</li>
-            <li>SMS and notification preferences</li>
-            <li>Device and browser information</li>
-        </ul>
-
-        <h2>How We Use Information</h2>
-        <p>We use collected information to:</p>
-        <ul>
-            <li>Provide scheduling, rental, and project management services</li>
-            <li>Send SMS notifications related to account activity, scheduling, verification, and important updates</li>
-            <li>Improve our software and customer support</li>
-            <li>Maintain security and prevent fraud</li>
-        </ul>
-
-        <h2>SMS Messaging and Consent</h2>
-        <p>By providing a phone number during account creation or rental scheduling, users agree to receive SMS notifications related to Services they have requested. Users may opt out at any time by replying <strong>STOP</strong>. Users may request help by replying <strong>HELP</strong>.</p>
-
-        <h2>Sharing of Information</h2>
-        <p>We do not sell customer information. We may share necessary information with:</p>
-        <ul>
-            <li>SMS providers (such as Twilio) for message delivery</li>
-            <li>Payment processors (such as Stripe) if applicable</li>
-            <li>Hosting and database platforms (such as Supabase)</li>
-        </ul>
-
-        <h2>Data Security</h2>
-        <p>We use industry-standard security practices to protect information, including encryption, authentication, and access control. While we take reasonable steps to protect data, no method of transmission or storage is 100% secure.</p>
-
-        <h2>Cookies and Analytics</h2>
-        <p>We may use cookies and analytic tools to improve website functionality and user experience. Cookies can be disabled in browser settings.</p>
-
-        <h2>Children's Privacy</h2>
-        <p>Our Services are intended for business users and are not directed at children under 13 years of age.</p>
-
-        <h2>Contact Information</h2>
-        <p>If you have questions about this Privacy Policy or would like to request data removal, please contact us at:</p>
-        <p><strong>Email:</strong> support@pm4subs.com<br>
-        <strong>Mailing Address:</strong> PM4Subs LLC, Portland, OR</p>
-
-        <h2>Changes to This Policy</h2>
-        <p>We may update this Privacy Policy from time to time. The updated version will be posted at this URL.</p>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 PM4Subs. All rights reserved.</p>
-            <p class="mt-2"><a href="/">Back to PM4Subs project management for subcontractors</a></p>
-        </div>
-    </footer>
-
-    <script>
-        function toggleSidePanel() {
-            const sidePanel = document.querySelector('.side-panel');
-            const overlay = document.querySelector('.side-panel-overlay');
-            const hamburger = document.querySelector('.hamburger');
-            sidePanel.classList.toggle('open');
-            overlay.classList.toggle('show');
-            hamburger.classList.toggle('active');
-            document.body.style.overflow = sidePanel.classList.contains('open') ? 'hidden' : '';
-        }
-        function closeSidePanel() {
-            const sidePanel = document.querySelector('.side-panel');
-            const overlay = document.querySelector('.side-panel-overlay');
-            const hamburger = document.querySelector('.hamburger');
-            sidePanel.classList.remove('open');
-            overlay.classList.remove('show');
-            hamburger.classList.remove('active');
-            document.body.style.overflow = '';
-        }
-        document.addEventListener('keydown', (e) => {
-            if (e.key === 'Escape') closeSidePanel();
-        });
-    </script>
-</body>
+        <script>
+            function toggleSidePanel() {
+                const sidePanel = document.querySelector(".side-panel");
+                const overlay = document.querySelector(".side-panel-overlay");
+                const hamburger = document.querySelector(".hamburger");
+                sidePanel.classList.toggle("open");
+                overlay.classList.toggle("show");
+                hamburger.classList.toggle("active");
+                document.body.style.overflow = sidePanel.classList.contains(
+                    "open",
+                )
+                    ? "hidden"
+                    : "";
+            }
+            function closeSidePanel() {
+                const sidePanel = document.querySelector(".side-panel");
+                const overlay = document.querySelector(".side-panel-overlay");
+                const hamburger = document.querySelector(".hamburger");
+                sidePanel.classList.remove("open");
+                overlay.classList.remove("show");
+                hamburger.classList.remove("active");
+                document.body.style.overflow = "";
+            }
+            document.addEventListener("keydown", (e) => {
+                if (e.key === "Escape") closeSidePanel();
+            });
+        </script>
+    </body>
 </html>
