--- a/products/index.html
+++ b/products/index.html
@@ -1,169 +1,223 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PM4Subs Tools | Project Management for Subcontractors</title>
-    <meta name="description" content="A suite of tools built specifically for subcontractors. Simple, affordable, and designed around real field workflows. Spec analyzer, header tracker, tool tracking, and more.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://pm4subs.com/products/">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>PM4Subs Tools | Project Management for Subcontractors</title>
+        <meta
+            name="description"
+            content="A suite of tools built specifically for subcontractors. Simple, affordable, and designed around real field workflows. Spec analyzer, header tracker, tool tracking, and more."
+        />
+        <meta name="robots" content="index, follow" />
+        <link rel="canonical" href="https://pm4subs.com/products/" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="PM4Subs Tools | Project Management for Subcontractors">
-    <meta property="og:description" content="A suite of tools built specifically for subcontractors. Simple, affordable, and designed around real field workflows.">
-    <meta property="og:url" content="https://pm4subs.com/products/">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://pm4subs.com/screenshots/projects-dashboard.png">
+        <!-- Open Graph -->
+        <meta
+            property="og:title"
+            content="PM4Subs Tools | Project Management for Subcontractors"
+        />
+        <meta
+            property="og:description"
+            content="A suite of tools built specifically for subcontractors. Simple, affordable, and designed around real field workflows."
+        />
+        <meta property="og:url" content="https://pm4subs.com/products/" />
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:image"
+            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+        />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="PM4Subs Tools | Project Management for Subcontractors">
-    <meta name="twitter:description" content="A suite of tools built specifically for subcontractors. Simple, affordable, and designed around real field workflows.">
-    <meta name="twitter:image" content="https://pm4subs.com/screenshots/projects-dashboard.png">
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            name="twitter:title"
+            content="PM4Subs Tools | Project Management for Subcontractors"
+        />
+        <meta
+            name="twitter:description"
+            content="A suite of tools built specifically for subcontractors. Simple, affordable, and designed around real field workflows."
+        />
+        <meta
+            name="twitter:image"
+            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+        />
 
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-        }
-    </script>
+        <!-- Tailwind CSS CDN -->
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                darkMode: "class",
+            };
+        </script>
 
-    <!-- Design System -->
-    <link rel="stylesheet" href="../design-system.css">
-</head>
-<body>
-    <!-- Navigation -->
-    <nav class="nav">
-        <div class="nav-container">
-            <a href="/" class="nav-logo">PM4Subs</a>
-            <div class="nav-links">
+        <!-- Design System -->
+        <link rel="stylesheet" href="../design-system.css" />
+    </head>
+    <body>
+        <!-- Navigation -->
+        <nav class="nav">
+            <div class="nav-container">
+                <a href="/" class="nav-logo">PM4Subs</a>
+                <div class="nav-links">
+                    <a href="/products/">Products</a>
+                    <a href="/tools/">Tools</a>
+                    <a href="/about/">About</a>
+                    <a href="/" class="btn-primary">Get Early Access</a>
+                </div>
+                <button
+                    class="hamburger"
+                    onclick="toggleSidePanel()"
+                    aria-label="Toggle menu"
+                >
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </nav>
+
+        <!-- Side Panel -->
+        <div class="side-panel-overlay" onclick="closeSidePanel()"></div>
+        <aside class="side-panel">
+            <nav class="side-panel-nav">
+                <span class="nav-section-title">Navigate</span>
+                <a href="/">Home</a>
                 <a href="/products/">Products</a>
+                <a href="/tools/">Tools</a>
                 <a href="/about/">About</a>
+
+                <span class="nav-section-title">Free Tools</span>
+                <a href="/image-compressor/">Image Compressor</a>
+                <a href="/spec-analyzer/">Spec Analyzer</a>
+                <a href="/header-tracker/">Header Tracker</a>
+                <a href="/tool-tracker/">Tool Tracker</a>
+
+                <span class="nav-section-title">Legal</span>
+                <a href="/privacy/">Privacy Policy</a>
+            </nav>
+            <div class="side-panel-cta">
                 <a href="/" class="btn-primary">Get Early Access</a>
             </div>
-            <button class="hamburger" onclick="toggleSidePanel()" aria-label="Toggle menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </nav>
+        </aside>
 
-    <!-- Side Panel -->
-    <div class="side-panel-overlay" onclick="closeSidePanel()"></div>
-    <aside class="side-panel">
-        <nav class="side-panel-nav">
-            <span class="nav-section-title">Navigate</span>
-            <a href="/">Home</a>
-            <a href="/products/">Products</a>
-            <a href="/about/">About</a>
+        <!-- Hero Section -->
+        <section class="hero">
+            <h1>PM4Subs Tools</h1>
+            <p>
+                A suite of tools built specifically for subcontractors. Simple,
+                affordable, and designed around real field workflows.
+            </p>
+        </section>
 
-            <span class="nav-section-title">Tools</span>
-            <a href="/spec-analyzer/">Spec Analyzer</a>
-            <a href="/header-tracker/">Header Tracker</a>
-            <a href="/tool-tracker/">Tool Tracker</a>
-
-            <span class="nav-section-title">Legal</span>
-            <a href="/privacy/">Privacy Policy</a>
-        </nav>
-        <div class="side-panel-cta">
-            <a href="/" class="btn-primary">Get Early Access</a>
-        </div>
-    </aside>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>PM4Subs Tools</h1>
-        <p>A suite of tools built specifically for subcontractors. Simple, affordable, and designed around real field workflows.</p>
-    </section>
-
-    <!-- Products Grid -->
-    <section class="section">
-        <div class="container">
-            <div class="grid-2">
-                <div class="card">
-                    <h2>Spec Analyzer</h2>
-                    <p>
-                        Upload spec PDFs and instantly extract Division 00, 01, 04, and 07 requirements. Built to eliminate hours of manual spec reading.
-                    </p>
-                    <div class="mt-3">
-                        <a class="btn-primary" href="/spec-analyzer/">Try Analyzer</a>
+        <!-- Products Grid -->
+        <section class="section">
+            <div class="container">
+                <div class="grid-2">
+                    <div class="card">
+                        <h2>Spec Analyzer</h2>
+                        <p>
+                            Upload spec PDFs and instantly extract Division 00,
+                            01, 04, and 07 requirements. Built to eliminate
+                            hours of manual spec reading.
+                        </p>
+                        <div class="mt-3">
+                            <a class="btn-primary" href="/spec-analyzer/"
+                                >Try Analyzer</a
+                            >
+                        </div>
                     </div>
-                </div>
 
-                <div class="card">
-                    <h2>Header Tracker</h2>
-                    <p>
-                        Automatic header sizing, prop counts, couplers, and rental timelines. Perfect for masonry contractors and field teams.
-                    </p>
-                    <div class="mt-3">
-                        <a class="btn-primary" href="/header-tracker/">Open Tool</a>
+                    <div class="card">
+                        <h2>Header Tracker</h2>
+                        <p>
+                            Automatic header sizing, prop counts, couplers, and
+                            rental timelines. Perfect for masonry contractors
+                            and field teams.
+                        </p>
+                        <div class="mt-3">
+                            <a class="btn-primary" href="/header-tracker/"
+                                >Open Tool</a
+                            >
+                        </div>
                     </div>
-                </div>
 
-                <div class="card">
-                    <h2>Tool Tracker</h2>
-                    <p>
-                        Check-in/check-out system for tools, small equipment, and jobsite assets. Reduce missing tools and keep the yard organized.
-                    </p>
-                    <div class="mt-3">
-                        <a class="btn-primary" href="/tool-tracker/">Learn More</a>
+                    <div class="card">
+                        <h2>Tool Tracker</h2>
+                        <p>
+                            Check-in/check-out system for tools, small
+                            equipment, and jobsite assets. Reduce missing tools
+                            and keep the yard organized.
+                        </p>
+                        <div class="mt-3">
+                            <a class="btn-primary" href="/tool-tracker/"
+                                >Learn More</a
+                            >
+                        </div>
                     </div>
-                </div>
 
-                <div class="card">
-                    <h2>PM4Subs Core</h2>
-                    <p>
-                        Manage RFIs, change orders, daily reports, photos, plans, specs, and proposals all in one platform.
-                    </p>
-                    <div class="mt-3">
-                        <a class="btn-primary" href="/">Learn More</a>
+                    <div class="card">
+                        <h2>PM4Subs Core</h2>
+                        <p>
+                            Manage RFIs, change orders, daily reports, photos,
+                            plans, specs, and proposals all in one platform.
+                        </p>
+                        <div class="mt-3">
+                            <a class="btn-primary" href="/">Learn More</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- CTA Section -->
-    <section class="cta-section">
-        <div class="container">
-            <h2>Ready to Simplify Your Workflow?</h2>
-            <p>Join subcontractors who are tired of fighting their tools</p>
-            <a href="/" class="btn-primary">Get Early Access</a>
-        </div>
-    </section>
+        <!-- CTA Section -->
+        <section class="cta-section">
+            <div class="container">
+                <h2>Ready to Simplify Your Workflow?</h2>
+                <p>Join subcontractors who are tired of fighting their tools</p>
+                <a href="/" class="btn-primary">Get Early Access</a>
+            </div>
+        </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 PM4Subs. All rights reserved. | <a href="/privacy/">Privacy Policy</a></p>
-            <p class="mt-2">Questions? <a href="mailto:hello@pm4subs.com">hello@pm4subs.com</a></p>
-        </div>
-    </footer>
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <p>
+                    &copy; 2025 PM4Subs. All rights reserved. |
+                    <a href="/privacy/">Privacy Policy</a>
+                </p>
+                <p class="mt-2">
+                    Questions?
+                    <a href="mailto:hello@pm4subs.com">hello@pm4subs.com</a>
+                </p>
+            </div>
+        </footer>
 
-    <script>
-        function toggleSidePanel() {
-            const sidePanel = document.querySelector('.side-panel');
-            const overlay = document.querySelector('.side-panel-overlay');
-            const hamburger = document.querySelector('.hamburger');
-            sidePanel.classList.toggle('open');
-            overlay.classList.toggle('show');
-            hamburger.classList.toggle('active');
-            document.body.style.overflow = sidePanel.classList.contains('open') ? 'hidden' : '';
-        }
-        function closeSidePanel() {
-            const sidePanel = document.querySelector('.side-panel');
-            const overlay = document.querySelector('.side-panel-overlay');
-            const hamburger = document.querySelector('.hamburger');
-            sidePanel.classList.remove('open');
-            overlay.classList.remove('show');
-            hamburger.classList.remove('active');
-            document.body.style.overflow = '';
-        }
-        document.addEventListener('keydown', (e) => {
-            if (e.key === 'Escape') closeSidePanel();
-        });
-    </script>
-</body>
+        <script>
+            function toggleSidePanel() {
+                const sidePanel = document.querySelector(".side-panel");
+                const overlay = document.querySelector(".side-panel-overlay");
+                const hamburger = document.querySelector(".hamburger");
+                sidePanel.classList.toggle("open");
+                overlay.classList.toggle("show");
+                hamburger.classList.toggle("active");
+                document.body.style.overflow = sidePanel.classList.contains(
+                    "open",
+                )
+                    ? "hidden"
+                    : "";
+            }
+            function closeSidePanel() {
+                const sidePanel = document.querySelector(".side-panel");
+                const overlay = document.querySelector(".side-panel-overlay");
+                const hamburger = document.querySelector(".hamburger");
+                sidePanel.classList.remove("open");
+                overlay.classList.remove("show");
+                hamburger.classList.remove("active");
+                document.body.style.overflow = "";
+            }
+            document.addEventListener("keydown", (e) => {
+                if (e.key === "Escape") closeSidePanel();
+            });
+        </script>
+    </body>
 </html>
